[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Characters/Base Class/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Characters/Enemy Base/Enemy.gd" type="Script" id=2]
[ext_resource path="res://SFX/Environment/explosion.wav" type="AudioStream" id=3]
[ext_resource path="res://Sprites/SpriteSheets/Effects/Sprite_eye_flash.png" type="Texture" id=4]
[ext_resource path="res://Scenes/Effects/Explosion/Explosion.tscn" type="PackedScene" id=5]
[ext_resource path="res://Scenes/Characters/Enemy Base/Enemy BaseFlash.tres" type="Animation" id=6]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 12.25 )

[sub_resource type="AtlasTexture" id=2]
atlas = ExtResource( 4 )
region = Rect2( 0, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=3]
atlas = ExtResource( 4 )
region = Rect2( 7, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=4]
atlas = ExtResource( 4 )
region = Rect2( 14, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=5]
atlas = ExtResource( 4 )
region = Rect2( 21, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=6]
atlas = ExtResource( 4 )
region = Rect2( 28, 0, 7, 7 )

[sub_resource type="AtlasTexture" id=7]
atlas = ExtResource( 4 )
region = Rect2( 35, 0, 7, 7 )

[sub_resource type="SpriteFrames" id=10]
animations = [ {
"frames": [ SubResource( 2 ), SubResource( 3 ), SubResource( 4 ), SubResource( 5 ), SubResource( 6 ), SubResource( 7 ) ],
"loop": false,
"name": "Flash",
"speed": 14.0
} ]

[sub_resource type="Animation" id=13]
resource_name = "Cancel"
tracks/0/type = "value"
tracks/0/path = NodePath("EyeL:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EyeR:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 0 ]
}

[sub_resource type="Animation" id=12]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("EyeL:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("EyeR:frame")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[node name="Enemy" groups=["Enemy"] instance=ExtResource( 1 )]
collision_layer = 4
collision_mask = 7
script = ExtResource( 2 )
explosion_scene = ExtResource( 5 )

[node name="Hurtbox" type="Area2D" parent="AnimatedSprite" index="0"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="AnimatedSprite/Hurtbox" index="0"]
shape = SubResource( 1 )

[node name="PathTimer" type="Timer" parent="." index="4"]
wait_time = 0.5
autostart = true

[node name="SpawnTimer" type="Timer" parent="." index="5"]
wait_time = 0.7
autostart = true

[node name="Eyes" type="Node2D" parent="." index="6"]

[node name="EyeL" type="AnimatedSprite" parent="Eyes" index="0"]
frames = SubResource( 10 )
animation = "Flash"

[node name="EyeR" type="AnimatedSprite" parent="Eyes" index="1"]
frames = SubResource( 10 )
animation = "Flash"

[node name="AnimationPlayer" type="AnimationPlayer" parent="Eyes" index="2"]
anims/Cancel = SubResource( 13 )
anims/Flash = ExtResource( 6 )
anims/RESET = SubResource( 12 )

[node name="OtherAudio" type="AudioStreamPlayer" parent="." index="7"]
stream = ExtResource( 3 )
volume_db = 1.0
bus = "SFX"

[connection signal="timeout" from="PathTimer" to="." method="_on_PathTimer_timeout"]
[connection signal="timeout" from="SpawnTimer" to="." method="_on_SpawnTimer_timeout"]
